--- a/src/MusicPlayerOnline.Maui/Pages/CacheCleanPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/CacheCleanPage.xaml
@@ -21,7 +21,8 @@
                      VerticalOptions="Start">
             <Label Text="缓存清理"
                    HorizontalOptions="Start"
-                   VerticalOptions="Start"/>
+                   VerticalOptions="Start"
+                   Style="{StaticResource Title}"/>
         </StackLayout>
 
         <ScrollView VerticalOptions="FillAndExpand">
